SecurityPOC/force-app/main/default/objects/Time_Off_Request__c/Time_Off_Request__c.object-meta.xml
<CustomObject>
    <label>Time-Off Request</label>
    <nameField>
        <label>Time-Off Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time-Off Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>