SecurityPOC/force-app/main/default/objects/Time_Off_Request__c/fields/Time_Off_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Off_Type__c</fullName>
    <label>Time-Off Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick Time</fullName>
            </value>
            <value>
                <fullName>Personal Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>